--- a/wiki/API_CIFProtocol_v1.wiki
+++ b/wiki/API_CIFProtocol_v1.wiki
@@ -108,6 +108,8 @@ An object that represents a query, typically embedded in a !QueryType object.
   optional. boolean. denotes whether or not the query should be logged
 
 === !QueryType ===
+An object that represents a set of queries, wrapped in specific metadata.
+
 {{{
     message QueryType {
         optional string apikey      = 1;
@@ -121,27 +123,29 @@ An object that represents a query, typically embedded in a !QueryType object.
 }}}
 
 *apikey*
-  optional. string.
+  optional. string. an authorization key.
 
 *guid*
-  optional. string.
+  optional. string. an associated group id.
 
 *limit*
-  optional. int32.
+  optional. int32. the max number of results to return.
 
 *confidence*
-  optional. int32.
+  optional. int32. the minimal confidence value to apply to the results.
 
 *query*
-  repeated. enum !QueryStruct.
+  repeated. enum !QueryStruct. the query to be executed.
 
 *description*
-  optional. string.
+  optional. string. metadata about the transaction.
 
 *feed*
-  optional. boolean.
+  optional. boolean. depicts if the result is a pre-generated feed, or live, up-to-date results.
 
 === !SubmissionType ===
+An object that holds submission data. Allows for a group id to be assigned to the submission. When !MessageType points to data, if the !MsgType is 'SUBMISSION', !SubmissionType will be used to encode the data.
+
 {{{
     message SubmissionType {
         optional string guid    = 1;
@@ -192,40 +196,40 @@ message FeedType {
 }}}
 
 *version*
-  required. string.
+  required. string. protocol version.
 
 *guid*
-  optional. string.
+  optional. string. the group id associated with the data.
 
 *confidence*
-  optional. int32.
+  optional. int32. associated confidence level of the feed data-set overall.
 
 *description*
-  required. string.
+  required. string. a description of the feed data-set.
 
 *ReportTime*
-  required. string.
+  required. string. a timestamp in which the data was generated, typically in the format 'YYYY-MM-DDThh:mm:ssZ'
 
 *restriction*
-  optional. enum RestrictionType.
+  optional. enum RestrictionType. restriction of the complete feed data-set
 
 *restriction_map*
-  repeated. enum MapType.
+  repeated. enum MapType. a map of restriction values (eg: IODEF to TLP) for a client to translate and represent locally.
 
 *group_map*
-  repeated. enum MapType.
+  repeated. enum MapType. a map of the guid values for a client to translate and represent locally.
 
 *data*
-  repeated. bytes.
+  repeated. bytes. the payload.
 
 *uuid*
-  optional. string.
+  optional. string. a unique identifier representing the feed data-set.
 
 *query_limit*
-  optional. int32.
+  optional. int32. used to inform a client when a router has overwritten a limit value.
 
 *feed_map*
-  repeated. enum MapType.
+  repeated. enum MapType. a map of feeds avail from the router.
 
 === !RestrictionType ===
 {{{
