Edited wiki page SmrtInstall_v1 through web user interface.

--- a/wiki/SmrtInstall_v1.wiki
+++ b/wiki/SmrtInstall_v1.wiki
@@ -10,7 +10,7 @@
 <wiki:toc max_depth="2" />
 
 = Details =
-== Required Dependencies ==
+== Install Required Dependencies ==
 ----
  * (unstable) [SmrtInstall_DebianSqueeze_v1 Debian Squeeze]
  * (unstable) [SmrtInstall_Ubuntu12_v1 Ubuntu12]
