--- a/wiki/DbiInstall_v1.wiki
+++ b/wiki/DbiInstall_v1.wiki
@@ -10,7 +10,7 @@
 <wiki:toc max_depth="2" />
 
 = Details =
-== Required Dependencies ==
+== Install Required Dependencies ==
 ----
  * (unstable) [DbiInstall_DebianSqueeze_v1 Debian Squeeze]
  * (unstable) [DbiInstall_Ubuntu12_v1 Ubuntu12]
