--- a/wiki/API_CIFProtocol_v1.wiki
+++ b/wiki/API_CIFProtocol_v1.wiki
@@ -10,7 +10,7 @@
 
 The cif-protocol is a low level encapsulation protocol that enables the transport of CIF messages throughout the framework. This protocol defines two types of objects, a top level raw 'msg' object, which acts like an envelope, as well as a 'feed' object that encapsulates feeds of data.
 
-A current version of the protocol can be found [https://github.com/collectiveintel/cif-protocol/tree/v1 here]
+A current version of the v1 protocol can be found [https://github.com/collectiveintel/cif-protocol/tree/v1 here]
 
 = Details =
 == !MessageType ==
