Edited wiki page API_ProtocolBuffers_v1 through web user interface.

--- a/wiki/API_ProtocolBuffers_v1.wiki
+++ b/wiki/API_ProtocolBuffers_v1.wiki
@@ -63,19 +63,32 @@ use CIF;
 use CIF::Client;
 use Iodef::Pb::Simple;
 
+# create a client object
 my ($err,$ret) = CIF::Config->new({
     config => '/home/cif/.cif',
 });
 
+my $cli = $ret;
+
+# my data
 my $hash = {
     address     => 'example.com',
     assessment  => 'botnet',
     confidence  => 86,
     description => 'zeus',
 };
+
+# generate an IODEF object from the key-pair
 # https://github.com/collectiveintel/cif-smrt/blob/v1/lib/CIF/Smrt.pm#L571
 my $iodef = Iodef::Pb::Simple->new($hash);
 
+# generate a new [API_CIFProtocol_v1#SubmissionType !SubmissionType] cif-protocol object
 # https://github.com/collectiveintel/cif-smrt/blob/v1/lib/CIF/Smrt.pm#L726
-
+{{{
+$ret = $cli->new_submission({
+    guid    => 'everyone',
+    data    => $iodef->encode(),
+});
     
+$ret = $cli->submit($ret);
+}}}
