Edited wiki page PostgresqlStandalone_v1 through web user interface.

--- a/wiki/PostgresqlStandalone_v1.wiki
+++ b/wiki/PostgresqlStandalone_v1.wiki
@@ -12,6 +12,6 @@
 
 = Details =
 == Install Required Dependencies ==
- * (unstable) [DbiInstall_DebianSqueeze_v1 Debian Squeeze]
- * (unstable) [DbiInstall_Ubuntu12_v1 Ubuntu12]
- * (unstable) [DbiInstall_CentOS6_v1 CentOS6]
+ * (unstable) [Debian Squeeze]
+ * (unstable) [Ubuntu12]
+ * (unstable) [CentOS6]
