Edited wiki page PostgresqlStandalone_v1 through web user interface.

--- a/wiki/PostgresqlStandalone_v1.wiki
+++ b/wiki/PostgresqlStandalone_v1.wiki
@@ -19,6 +19,9 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 
 == Install Required Dependencies ==
 ----
- * (unstable) [Debian Squeeze]
- * (unstable) [PostgresqlInstall_Ubuntu12_v1 Ubuntu 12]
- * (unstable) [CentOS6]
+ * (unstable) Debian Squeeze
+ * (unstable) Ubuntu 12
+{{{
+$ sudo aptitude -y install postgresql postgresql-contrib
+}}}
+ * (unstable) CentOS6
