Edited wiki page PostgresqlStandalone_v1 through web user interface.

--- a/wiki/PostgresqlStandalone_v1.wiki
+++ b/wiki/PostgresqlStandalone_v1.wiki
@@ -25,3 +25,6 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 $ sudo aptitude -y install postgresql postgresql-contrib
 }}}
  * (unstable) CentOS6
+
+== Postgres configuration ==
+----
