Edited wiki page PostgresqlStandalone_v1 through web user interface.

--- a/wiki/PostgresqlStandalone_v1.wiki
+++ b/wiki/PostgresqlStandalone_v1.wiki
@@ -28,3 +28,6 @@ $ sudo aptitude -y install postgresql postgresql-contrib
 
 == Postgres configuration ==
 ----
+=== Postgres ===
+Configure Postgres authentication and performance tuning
+ # [PostgresInstall_v1 PostgresSetup]
