--- a/wiki/PostgresqlStandalone_v1.wiki
+++ b/wiki/PostgresqlStandalone_v1.wiki
@@ -31,3 +31,23 @@ $ sudo aptitude -y install postgresql postgresql-contrib
 === Postgres ===
 Configure Postgres authentication and performance tuning
  # [PostgresInstall_v1 PostgresSetup]
+
+=== Postgres Authentication Configuration ===
+(note the 'trust' setting, make sure your iptables are up to date!)
+
+ # Add the listening IP address of the machine to pg_hba.conf. 
+{{{
+$ sudo vi /etc/postgresql/9.1/main/pg_hba.conf
+}}}
+{{{
+ # IPv4 local connections:
++host	 all	     all	 10.0.0.1/32	       trust
+}}}
+ # Modify the postgresql service so that it is listening for IP based connections
+{{{
+$ sudo vi /etc/postgresql/9.1/main/postgresql.conf
+}}}
+{{{
+-listen_addresses = 'localhost'
++listen_addresses = '*'
+}}}
