--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -2,6 +2,9 @@
 
 = CIFv1 Distributed Environment =
 
+* Table of Contents *
+<wiki:toc max_depth="2" />
+
 cif v1 is architected in a way that allows it's major components to be distributed among many hosts when a single host becomes resource constrained. 
 
 === Key ===
