--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -344,6 +344,8 @@ need-to-know|everyone|scanner   |ssh        |85        |2012-12-20T16:00:00Z|201
 
 == Configuring Logging ==
 
+These instructions assume your distribution uses [https://fedorahosted.org/logrotate/ Logrotate] to rotate log files. 
+
  # Create the log folder and set permissions
 {{{
 $ sudo mkdir /var/log/cif
