--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -342,7 +342,7 @@ need-to-know|everyone|scanner   |ssh        |85        |2012-12-20T16:00:00Z|201
 = Finishing Up =
 ----
 
-== Configuring Logging ==
+== Configuring Log Rotation ==
 
 These instructions assume your distribution uses [https://fedorahosted.org/logrotate/ Logrotate] to rotate log files. 
 
