Edited wiki page ServerInstall_v1 through web user interface.

--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -353,7 +353,7 @@ $ sudo chown cif:cif /var/log/cif
 }}}
  # Create the Logrotate conf file
 {{{
-$ sudo vim /etc/logrotate.d/cif
+$ sudo vi /etc/logrotate.d/cif
 }}}
  # Copy and paste the following
 {{{
