--- a/wiki/WhatisCIF.wiki
+++ b/wiki/WhatisCIF.wiki
@@ -76,6 +76,9 @@ All public presentation content licensed under [http://creativecommons.org/licen
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=i2smm2012_ses.pdf Internet2 Combined Industry and Research Constituency Meeting]
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2012_zombie_hunting.pdf Zombie Hunting]
 
+== Recent 3rd Party Presentation s==
+ * http://www.slideshare.net/eherna2000/intro-to-cif-hackmiamiorg
+
 == Archived Presentations ==
  * 2011 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=ren-isac.pdf GFirst | NIST ISTAC | APWG]
  * 2011 -- [http://collective-intelligence-framework.googlecode.com/files/ISOI_2011.pdf ISOI9]
