Edited wiki page API_v1 through web user interface.

--- a/wiki/API_v1.wiki
+++ b/wiki/API_v1.wiki
@@ -49,7 +49,7 @@ import json
 
 from subprocess import Popen, PIPE
 
-cifresult = Popen('/usr/local/bin/cif -q '+ipaddr+' -p json', shell=True, stdout=PIPE).stdout.read()
+cifresult = Popen('/opt/cif/bin/cif -q '+ipaddr+' -p json', shell=True, stdout=PIPE).stdout.read()
 sys.stderr.write('D:CIF output: '+cifresult+'\n')
 
 for result in json.loads(cifresult):
